[package]#
edition = "2021"
name = "sprs-superlu"
version = "0.1.2"
license = "MIT"
authors = ["Henrik Stromberg <henrik@askdrq.com>"]
description = "The package provides a high level interface between SuperLU, sprs and ndarray."
repository = "https://github.com/HenrikJStromberg/sprs-superlu"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superlu-sys = "0.3.5"
libc = "0.2.151"
sprs = "0.11"
ndarray = "0.15.6"
